[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Environment/Elevator.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Elevator.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/UI/W-Key.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/UI/S-Key.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 44, 62 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 63 )

[node name="Elevator" type="Node2D"]
script = ExtResource( 2 )
speed = 200.0

[node name="Platform" type="KinematicBody2D" parent="."]

[node name="Key_W" type="Sprite" parent="Platform"]
visible = false
position = Vector2( 0, -154 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Key_S" type="Sprite" parent="Platform"]
visible = false
position = Vector2( 0, 17 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Platform"]
position = Vector2( 0, -69.75 )
scale = Vector2( 1.25, 1.385 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Platform"]

[node name="PlayerEnterCollision" type="CollisionShape2D" parent="Platform/Area2D"]
position = Vector2( 0, -70 )
shape = SubResource( 2 )

[node name="CollisionGround" type="CollisionShape2D" parent="Platform"]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="CollisionWallLeft" type="CollisionShape2D" parent="Platform"]
position = Vector2( -69, -71 )
shape = SubResource( 3 )
disabled = true

[node name="CollisionWallRight" type="CollisionShape2D" parent="Platform"]
position = Vector2( 69, -71 )
shape = SubResource( 3 )
disabled = true

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[connection signal="body_entered" from="Platform/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Platform/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
